fix: set docs_dir to repo root in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_url: https://librestock.github.io/documentation/
 repo_url: https://github.com/librestock/documentation
 repo_name: librestock/documentation
 copyright: Copyright &copy; 2025 LibreStock Inventory
+docs_dir: .
 
 theme:
   name: material
